# wasi_wasmtime_test

wasi/: Cargo.toml  rust-toolchain.toml
wasi/src/: lib.rs
wasmtime_test/: Cargo.toml
wasmtime_test/src/: main.rs
