[package]
name = "wasi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.75"
hyper = { version = "0.14.27", features = ["client", "http2", "http1"] }
pin-project-lite = "0.2.13"
tokio = { version = "1.32.0", features = ["sync", "rt"] }
tower = "0.4.13"
