[package]
name = "wasmtime_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
colony = "0.3.0"
futures = "0.3.28"
pin-project-lite = "0.2.13"
tokio = { version = "1.32.0", features = ["rt-multi-thread", "net"] }
wasi-common = "12.0.1"
wasmtime = { version = "12.0.1", features = ["cranelift"] }
wasmtime-wasi = "12.0.1"
